# sfml-breakout

./: .clang-format  .gitignore  CMakeLists.txt  copy_cc.sh
src/: CMakeLists.txt  Game.cpp  GameInfo.cpp  main.cpp
src/GameData/: AssetManager.cpp  CMakeLists.txt  StateMachine.cpp
src/States/: CMakeLists.txt  MenuState.cpp  SplashState.cpp
src/include/: CMakeLists.txt  Game.hpp  GameInfo.hpp  State.hpp  config.hpp
src/include/GameData/: AssetManager.hpp  CMakeLists.txt  GameData.hpp  StateMachine.hpp
src/include/States/: MenuState.hpp  SplashState.hpp
